--- a/TestFN2D/TestFN2D_WIN.csproj
+++ b/TestFN2D/TestFN2D_WIN.csproj
@@ -45,38 +45,17 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="OpenTK, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ThirdParty\windows\OpenTK.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenTK.GLControl, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ThirdParty\windows\OpenTK.GLControl.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Drawing" />
-    <Reference Include="OpenTK">
-      <HintPath>..\ThirdParty\OpenTK.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenTK.GLControl">
-      <HintPath>..\ThirdParty\OpenTK.GLControl.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Images\button_blue.png" />
-    <EmbeddedResource Include="Images\button_blue_pressed.png" />
-    <EmbeddedResource Include="Images\button_disabled.png" />
-    <EmbeddedResource Include="Images\button_green.png" />
-    <EmbeddedResource Include="Images\button_green_pressed.png" />
-    <EmbeddedResource Include="Images\button_red.png" />
-    <EmbeddedResource Include="Images\button_red_pressed.png" />
-    <EmbeddedResource Include="Images\OldPenny.png" />
-    <EmbeddedResource Include="Images\SkaraBrae.jpg" />
-    <EmbeddedResource Include="Images\PurpleSquares.png" />
-    <EmbeddedResource Include="Images\PurpleSquaresDisabled.png" />
-    <EmbeddedResource Include="Images\YellowCircles.png" />
-    <EmbeddedResource Include="Images\YellowCirclesDisabled.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Fonts\Vera.ttf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Fonts\VeraBd.ttf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FN2D\FN2D_WIN.csproj">
@@ -85,9 +64,28 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\ThirdParty\freetype.dll">
+    <Content Include="..\ThirdParty\windows\freetype.dll">
       <Link>freetype.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Fonts\COPYRIGHT.TXT" />
+    <EmbeddedResource Include="Assets\Images\button_blue.png" />
+    <EmbeddedResource Include="Assets\Images\button_blue_pressed.png" />
+    <EmbeddedResource Include="Assets\Images\button_disabled.png" />
+    <EmbeddedResource Include="Assets\Images\button_green.png" />
+    <EmbeddedResource Include="Assets\Images\button_green_pressed.png" />
+    <EmbeddedResource Include="Assets\Images\button_red.png" />
+    <EmbeddedResource Include="Assets\Images\button_red_pressed.png" />
+    <EmbeddedResource Include="Assets\Images\OldPenny.png" />
+    <EmbeddedResource Include="Assets\Images\PurpleSquares.png" />
+    <EmbeddedResource Include="Assets\Images\PurpleSquaresDisabled.png" />
+    <EmbeddedResource Include="Assets\Images\SkaraBrae.jpg" />
+    <EmbeddedResource Include="Assets\Images\YellowCircles.png" />
+    <EmbeddedResource Include="Assets\Images\YellowCirclesDisabled.png" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="Assets\Fonts\Vera.ttf" />
+    <None Include="Assets\Fonts\VeraBd.ttf" />
   </ItemGroup>
 </Project>
